# ota-mkfw

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  ota-mkfs  ota-mkfw  ota_mkfw.py  requirements.txt  setup.py
otatools/: dfu.py  mkfw.py  upload.py
src/: cli.yaml  lib.rs.in  main.rs
