[package]
name = "ota-mkfw"
version = "0.0.1"
authors = ["Vladimir Ermakov <vooon341@gmail.com"]
license = "Apache-2.0"
build = "build.rs"

[dependencies]
clap = {version="2", features=["yaml"]}
#cbor = "0.3"
#rustc-serialize = "*"
serde = "*"
serde_cbor = "*"

[build-dependencies]
syntex = "*"
serde_codegen = "*"
